--- a/ocaml-expat/Makefile
+++ b/ocaml-expat/Makefile
@@ -1,5 +1,5 @@
 # Created by: Marwan Burelle <marwan.burelle@lri.fr
-# $FreeBSD: head/textproc/ocaml-expat/Makefile 327773 2013-09-20 23:17:30Z bapt $
+# $FreeBSD: head/textproc/ocaml-expat/Makefile 340722 2014-01-22 17:00:46Z mat $
 
 PORTNAME=	ocaml-expat
 PORTVERSION=	0.9.1
