--- a/ocaml-images/Makefile
+++ b/ocaml-images/Makefile
@@ -1,5 +1,5 @@
 # Created by: ijliao
-# $FreeBSD: head/graphics/ocaml-images/Makefile 327733 2013-09-20 18:35:44Z bapt $
+# $FreeBSD: head/graphics/ocaml-images/Makefile 340722 2014-01-22 17:00:46Z mat $
 
 PORTNAME=	images
 PORTVERSION=	3.0.2
