--- a/ocaml-net/Makefile
+++ b/ocaml-net/Makefile
@@ -1,5 +1,5 @@
 # Created by: Stephane Legrand <stephane@FreeBSD.org>
-# $FreeBSD: head/www/ocaml-net/Makefile 327776 2013-09-20 23:36:50Z bapt $
+# $FreeBSD: head/www/ocaml-net/Makefile 340722 2014-01-22 17:00:46Z mat $
 
 PORTNAME=	net
 PORTVERSION=	3.5.1
