--- a/ocaml/Makefile
+++ b/ocaml/Makefile
@@ -1,5 +1,5 @@
 # Created by: Kiriyama Kazuhiko <kiri@kiri.toba-cmt.ac.jp>
-# $FreeBSD: head/lang/ocaml/Makefile 327741 2013-09-20 19:53:09Z bapt $
+# $FreeBSD: head/lang/ocaml/Makefile 345109 2014-02-19 16:20:49Z gahr $
 
 PORTNAME=	ocaml
 PORTVERSION=	3.12.1
@@ -35,19 +35,8 @@ MODOPT=		camlp4o camlp4r ocamlc ocamldep ocamldoc ocamllex ocamlopt
 PATTERN=	[[:space:]]*(do|then)?[[:space:]]*)(\$$\(CP\)|cp)([[:space:]]
 
 NO_STAGE=	yes
-.include <bsd.port.pre.mk>
 
-.if ${ARCH} == powerpc
-ARCH=	power
-.endif
-
-.if ${ARCH} == power
-PLIST_SUB+=	PROF="@comment "
-.else
-PLIST_SUB+=	PROF=""
-.endif
-
-.include "${FILESDIR}/manfiles"
+.include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MTHREADS}
 PLIST_SUB+=	THREADS=""
@@ -80,15 +69,27 @@ CONFLICTS+=	ocaml-[0-9]* ocaml-nox11-[0-9]*
 .endif
 CONFIGURE_ARGS+=-no-tk
 .else
-USE_TK=		84+
-INVALID_TK_VER =	86
-.include "${PORTSDIR}/Mk/bsd.tcl.mk"
+USES+=		tk:84,85
 PLIST_SUB+=	TK=""
 CONFLICTS+=	ocaml-nox11-[0-9]* ocaml-notk-[0-9]*
 CONFIGURE_ARGS+=	-tkdefs \
 			"-I${TCL_INCLUDEDIR} -I${TK_INCLUDEDIR} ${THR_CPP}" \
-			-tklibs "-L${LOCALBASE}/lib -ltk${TK_VER:S|.||} \
-			-ltcl${TCL_VER:S|.||} ${THR_LD}"
+			-tklibs "-L${LOCALBASE}/lib -ltk${TK_SHLIB_VER} \
+			-ltcl${TCL_SHLIB_VER} ${THR_LD}"
+.endif
+
+.include <bsd.port.pre.mk>
+
+.include "${FILESDIR}/manfiles"
+
+.if ${ARCH} == powerpc
+ARCH=	power
+.endif
+
+.if ${ARCH} == power
+PLIST_SUB+=	PROF="@comment "
+.else
+PLIST_SUB+=	PROF=""
 .endif
 
 .if ${ARCH} == sparc64
