--- a/ocaml-cryptokit/Makefile
+++ b/ocaml-cryptokit/Makefile
@@ -1,5 +1,5 @@
 # Created by: Mario Sergio Fujikawa Ferreira <lioux@FreeBSD.org>
-# $FreeBSD: head/security/ocaml-cryptokit/Makefile 327769 2013-09-20 22:55:24Z bapt $
+# $FreeBSD: head/security/ocaml-cryptokit/Makefile 349298 2014-03-26 21:53:01Z antoine $
 
 PORTNAME=	cryptokit
 PORTVERSION=	1.6
@@ -10,6 +10,7 @@ PKGNAMEPREFIX=	ocaml-
 MAINTAINER=	jaapb@kerguelen.org
 COMMENT=	Variety of cryptographic primitives for Objective Caml
 
+DESTDIRNAME=	destdir
 HAS_CONFIGURE=	yes
 
 USE_OCAML=	yes
@@ -17,19 +18,20 @@ USE_OCAML_LDCONFIG=	yes
 USE_OCAML_FINDLIB=	yes
 USE_OCAMLFIND_PLIST=	yes
 
+DOCSDIR=	${OCAML_DOCSDIR}/${PORTNAME}
+PORTDOCS=	*
+
 OPTIONS_DEFINE=	DOCS
 
-NO_STAGE=	yes
 .include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MDOCS}
 ALL_TARGET+=	doc
-CONFIGURE_ARGS+=	--docdir ${PREFIX}/share/doc/ocaml
-
-PORTDOCS=	*
+CONFIGURE_ARGS+=	--docdir ${OCAML_DOCSDIR}
 .endif
 
-DOC_FILES=	Changes LICENSE README
-DOCSDIR=	${PREFIX}/share/doc/ocaml/${PORTNAME}
+post-patch:
+	${REINPLACE_CMD} 's,"install","install" :: "-ldconf ignore",' \
+		${WRKSRC}/setup.ml
 
 .include <bsd.port.mk>
