--- a/lang/ocaml/Makefile
+++ b/lang/ocaml/Makefile
@@ -1,9 +1,9 @@
 # Created by: Kiriyama Kazuhiko <kiri@kiri.toba-cmt.ac.jp>
-# $FreeBSD: head/lang/ocaml/Makefile 353142 2014-05-07 08:27:28Z marino $
+# $FreeBSD$
 
 PORTNAME=	ocaml
 PORTVERSION=	4.01.0
-PORTREVISION=	1
+PORTREVISION=	3
 CATEGORIES=	lang
 MASTER_SITES=	http://caml.inria.fr/pub/distrib/${DISTNAME:R}/ \
 		${MASTER_SITE_GENTOO}
@@ -36,12 +36,10 @@ CONFIGURE_ARGS=	-verbose -prefix "${PREFIX}" \
 		-aspp "${CC} -c" \
 		-partialld "${LD} -r"
 
-OPTIONS_DEFINE= X11 TK THREADS OPT_DEF DOCS
+OPTIONS_DEFINE= X11 TK THREADS DOCS
 OPTIONS_DEFAULT=X11 TK THREADS
-OPT_DEF_DESC=	Use system-optimized binaries by default
 TK_DESC=	LablTk library (requires X11 support)
 CMP_LIB_DESC=	Install compiler libraries
-OPT_DEF_DESC=	Use system-optimizes binaries by default
 PORTDOCS=	htmlman ${DOCSDISTNAME}-refman.ps.gz \
 		${DOCSDISTNAME}-refman.pdf
 
@@ -198,18 +196,5 @@ post-install:
 
 # Fix permissions for ld.conf
 	@${CHMOD} 644 ${STAGEDIR}${PREFIX}/lib/ocaml/ld.conf
-
-# Do we want .opt version of tools to be the default ?
-.if ${PORT_OPTIONS:MOPT_DEF}
-. for module in ${MODOPT}
-#	First, we save bytecode version
-	${MV} ${STAGEDIR}${PREFIX}/bin/${module} ${STAGEDIR}${PREFIX}/bin/${module}.byte
-
-#	Next make .opt version be the default one (via link)
-	${LN} ${STAGEDIR}${PREFIX}/bin/${module}.opt ${STAGEDIR}${PREFIX}/bin/${module}
-	@${ECHO_CMD} "bin/${module}.byte" >> ${TMPPLIST}
-	@${ECHO_CMD} "@exec ${LN} %D/${module}.opt %D/${module}" >> ${TMPPLIST}
-. endfor
-.endif
 
 .include <bsd.port.post.mk>
