--- a/devel/ocaml-camomile/Makefile
+++ b/devel/ocaml-camomile/Makefile
@@ -1,5 +1,5 @@
 # Created by: ijliao
-# $FreeBSD: head/devel/ocaml-camomile/Makefile 340722 2014-01-22 17:00:46Z mat $
+# $FreeBSD: head/devel/ocaml-camomile/Makefile 357277 2014-06-10 07:39:01Z olgeni $
 
 PORTNAME=	camomile
 PORTVERSION=	0.8.3
@@ -8,10 +8,9 @@ MASTER_SITES=	SF
 PKGNAMEPREFIX=	ocaml-
 
 MAINTAINER=	michael.grunewald@laposte.net
-COMMENT=	A comprehensive Unicode library for objective caml language
+COMMENT=	Comprehensive Unicode library for objective caml language
 
-USE_BZIP2=	yes
-USE_GMAKE=	yes
+USES=		gmake tar:bzip2
 USE_OCAML=	yes
 USE_OCAML_FINDLIB=yes
 USE_OCAML_LDCONFIG=yes
