--- a/devel/ocaml-cppo/Makefile
+++ b/devel/ocaml-cppo/Makefile
@@ -1,5 +1,5 @@
 # Created by: Michael Grunewald
-# $FreeBSD: head/devel/ocaml-cppo/Makefile 327724 2013-09-20 17:13:42Z bapt $
+# $FreeBSD: head/devel/ocaml-cppo/Makefile 357277 2014-06-10 07:39:01Z olgeni $
 
 PORTNAME=	cppo
 PORTVERSION=	0.9.2
@@ -8,9 +8,9 @@ MASTER_SITES=	http://martin.jambon.free.fr/
 PKGNAMEPREFIX=	ocaml-
 
 MAINTAINER=	michael.grunewald@laposte.net
-COMMENT=	A simple preprocessor for OCaml
+COMMENT=	Simple preprocessor for OCaml
 
-USE_GMAKE=	yes
+USES=		gmake
 USE_OCAML=	yes
 MAKE_JOBS_UNSAFE=	yes
 
