--- a/devel/ocaml-cppo/Makefile
+++ b/devel/ocaml-cppo/Makefile
@@ -1,5 +1,5 @@
 # Created by: Michael Grunewald
-# $FreeBSD: head/devel/ocaml-cppo/Makefile 357277 2014-06-10 07:39:01Z olgeni $
+# $FreeBSD: head/devel/ocaml-cppo/Makefile 361465 2014-07-10 15:46:06Z vanilla $
 
 PORTNAME=	cppo
 PORTVERSION=	0.9.2
@@ -7,15 +7,11 @@ CATEGORIES=	devel
 MASTER_SITES=	http://martin.jambon.free.fr/
 PKGNAMEPREFIX=	ocaml-
 
-MAINTAINER=	michael.grunewald@laposte.net
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Simple preprocessor for OCaml
 
 USES=		gmake
 USE_OCAML=	yes
 MAKE_JOBS_UNSAFE=	yes
 
-DOCSDIR=	${PREFIX}/share/doc/ocaml/${PORTNAME}
-EXAMPLESDIR=	${PREFIX}/share/examples/ocaml/${PORTNAME}
-
-NO_STAGE=	yes
 .include <bsd.port.mk>
