--- a/lang/ocaml/Makefile
+++ b/lang/ocaml/Makefile
@@ -95,7 +95,7 @@ CONFIGURE_ARGS+=-no-graph
 
 OCAML_ARCH= ${ARCH:S/x86_64/amd64/:S/powerpc/power/:S/armv6/arm/}
 
-.if defined(NO_PROFILE) || ${OCAML_ARCH} == power
+.if defined(NO_PROFILE) || ${OCAML_ARCH} == power || ${OCAML_ARCH} == amd64
 PLIST_SUB+=	PROF="@comment "
 .else
 PLIST_SUB+=	PROF=""
