--- a/lang/ocaml/Makefile
+++ b/lang/ocaml/Makefile
@@ -1,19 +1,20 @@
 # Created by: Kiriyama Kazuhiko <kiri@kiri.toba-cmt.ac.jp>
 # $FreeBSD: head/lang/ocaml/Makefile 371260 2014-10-20 11:32:00Z marino $
-
+#
 # for committer: bump PORTREVISION for math/facile whenever ocaml gets updated
+
 PORTNAME=	ocaml
 PORTVERSION=	4.02.1
 CATEGORIES=	lang
 MASTER_SITES=	http://caml.inria.fr/pub/distrib/${DISTNAME:R}/ \
 		${MASTER_SITE_GENTOO}
-MASTER_SITE_SUBDIR=	distfiles
+MASTER_SITE_SUBDIR=	${DISTDIR}
 PKGNAMESUFFIX=	${SFX}
 DISTFILES=	${DISTNAME}${EXTRACT_SUFX}
 EXTRACT_ONLY=	${DISTNAME}${EXTRACT_SUFX}
 
 MAINTAINER=	michipili@gmail.com
-COMMENT=	The Objective Caml compiler and programming environment
+COMMENT=	OCaml compiler and programming environment
 
 LICENSE=		QPL10 LGPL20
 LICENSE_COMB=		multi
@@ -22,6 +23,7 @@ LICENSE_FILE_QPL10=	${WRKSRC}/LICENSE
 LICENSE_PERMS_QPL10=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
 
 USES=		gmake tar:xz
+USE_LDCONFIG=	${PREFIX}/lib/ocaml ${PREFIX}/lib/ocaml/stub-libs
 REINPLACE_ARGS=	-i ""
 HAS_CONFIGURE=	yes
 ALL_TARGET=	world.opt
@@ -36,7 +38,7 @@ CONFIGURE_ARGS=	-verbose -prefix "${PREFIX}" \
 		-aspp "${CC} -c" \
 		-partialld "${LD} -r"
 
-OPTIONS_DEFINE= X11 THREADS DOCS EXAMPLES
+OPTIONS_DEFINE=	X11 THREADS DOCS EXAMPLES
 OPTIONS_DEFAULT=X11 THREADS
 CMP_LIB_DESC=	Install compiler libraries
 PORTDOCS=	htmlman ${DOCSDISTNAME}-refman.ps.gz \
@@ -62,9 +64,9 @@ PLIST_SUB+=	DOC="@comment "
 .endif
 
 .if ${ARCH} == armv6
-CONFIGURE_ARGS+= -as "${AS} ${ASFLAGS} -mfpu=softvfp -meabi=5"
+CONFIGURE_ARGS+=-as "${AS} ${ASFLAGS} -mfpu=softvfp -meabi=5"
 .else
-CONFIGURE_ARGS+= -as "${AS} ${ASFLAGS}"
+CONFIGURE_ARGS+=-as "${AS} ${ASFLAGS}"
 .endif
 
 .if ${PORT_OPTIONS:MTHREADS}
@@ -93,7 +95,7 @@ CONFIGURE_ARGS+=-no-graph
 .include <bsd.port.pre.mk>
 .include "${FILESDIR}/manfiles"
 
-OCAML_ARCH= ${ARCH:S/x86_64/amd64/:S/powerpc/power/:S/armv6/arm/}
+OCAML_ARCH=	${ARCH:S/x86_64/amd64/:S/powerpc/power/:S/armv6/arm/}
 
 .if defined(NO_PROFILE) || ${OCAML_ARCH} == power || ${OCAML_ARCH} == amd64
 PLIST_SUB+=	PROF="@comment "
